syntax = "proto3";
package v1;

message Greeting {
    string firstname = 1;
    string lastname = 2;
}

message CreateRequest {
    Greeting greeting = 1;
}

message CreateResponse {
    string result = 1;
}

service GreetService {
    rpc GreetStream(CreateRequest) returns (stream CreateResponse) {};
}
