syntax = "proto3";

package welcome;

message Hello {
  string first_name = 1;
  string last_name = 2;
}

message HelloWithDeadlineRequest {
  Hello hello = 1;
}

message HelloWithDealLineResponse {
  string result = 1;
}

service HelloService {
  rpc HelloWithDeadline(HelloWithDeadlineRequest) returns (HelloWithDealLineResponse) {};
}